<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.jgchk.haven.ui.main.filter.FilterViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/filter_gender_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(buttonView, isChecked) -> viewModel.onMaleCheckedChanged(buttonView, isChecked)}"
                android:text="@string/filter_cbMale_text" />

            <CheckBox
                android:id="@+id/cbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cbFemale_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_age_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cbChildren_text" />

            <CheckBox
                android:id="@+id/cbYoungAdults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cbYoungAdults_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_family_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbFamilies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cbFamilies_text" />

            <CheckBox
                android:id="@+id/cbFamiliesWithNewborns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_cbFamiliesWithNewborns_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_veterans_header" />

        <CheckBox
            android:id="@+id/cbVeterans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_cbVeterans_text" />
    </LinearLayout>
</layout>