<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.jgchk.haven.ui.detail.DetailViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tvAddress"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="24dp"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawableTint="@color/primary"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:padding="12dp"
                android:text="@{viewModel.shelter.address}" />

            <include layout="@layout/item_horizontal_divider" />

            <TextView
                android:id="@+id/tvPhone"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="24dp"
                android:drawableStart="@drawable/ic_local_phone_black_24dp"
                android:drawableTint="@color/primary"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:padding="12dp"
                android:text="@{viewModel.shelter.phone}" />

            <include layout="@layout/item_horizontal_divider" />

            <TextView
                android:id="@+id/tvRestrictions"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="24dp"
                android:drawableStart="@drawable/ic_check_circle_black_24dp"
                android:drawableTint="@color/primary"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:padding="12dp"
                android:text="@{viewModel.shelter.getRestrictionsString()}" />

            <include layout="@layout/item_horizontal_divider" />

            <TextView
                android:id="@+id/tvNotes"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="24dp"
                android:drawableStart="@drawable/ic_assignment_black_24dp"
                android:drawableTint="@color/primary"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:padding="12dp"
                android:text="@{viewModel.shelter.notes}" />

            <include layout="@layout/item_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_airline_seat_individual_suite_black_24dp"
                    android:tint="@color/primary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvVacancies"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/primary_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.shawnlin.numberpicker.NumberPicker
                            android:id="@+id/npVacancyClaim"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="visible"
                            app:np_max="999"
                            app:np_min="1"
                            app:np_orientation="horizontal"
                            app:valueChangedListener="@{viewModel.reservationsValueChangeListener}" />

                        <TextView
                            android:id="@+id/tvVacancySpots"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/detail_tvVacancySpots_text"
                            android:textColor="@color/primary_text"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tvVacancyRelease"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@{viewModel.numReservations + ` beds`}"
                            android:textColor="@color/primary_text"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btnVacancyRelease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:onClick="@{() -> viewModel.onReleaseClick()}"
                            android:text="@string/detail_btnVacancyRelease_text"
                            android:visibility="gone" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnVacancyClaim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:onClick="@{() -> viewModel.onReserveClick()}"
                        android:text="@string/detail_btnVacancyClaim_text" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/item_horizontal_divider" />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>